--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script language="javascript">location.replace("http://http://starbbs.web1337.net/")</script>
+<script language="javascript">location.replace("http://starbbs.web1337.net/")</script>
